# garmin_mcp

./: README.md  pyproject.toml
src/garmin_mcp/: __init__.py  browser_session.py
tests/: test_browser_session.py  test_garmin.py  test_mcp_debug.py
